style/card-style.css
article {
  position: relative;
  perspective: 1000px;
  width: 300px;
  height: 350px;
}

article .front,
article .back {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  text-align: center;
  backface-visibility: hidden;
  background: #ffffff;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
    rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
  padding: 24px;
  transition: 0.6s;
  cursor: pointer;
}

.back {
  transform: rotateY(180deg);
}

input {
  position: absolute;
  scale: 0;
}

input:checked ~ article .back {
  transform: rotateY(0);
}

input:checked ~ article .front {
  transform: rotateY(-180deg);
}

img {
  width: 100%;
}

